--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,4 @@
-baseURL: http://example.org/
+baseURL: https://bx511021.github.io/Myblog/
 languageCode: en-us
 title: My New Hugo Site
-
 theme: "PaperMod"
