--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://bx511021.github.io/Myblog
+baseURL: https://bx511021.github.io/Myblog/
 languageCode: en-us
 title: My New Hugo Site
 theme: "PaperMod"
